--- a/package.json
+++ b/package.json
@@ -12,27 +12,39 @@
     "@hookform/resolvers": "^3.6.0",
     "@phosphor-icons/react": "^2.1.6",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-three/drei": "^9.108.1",
+    "@react-three/fiber": "^8.16.8",
     "@tanstack/react-query": "^5.45.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.5",
+    "framer-motion": "^11.3.2",
+    "lodash.debounce": "^4.0.8",
+    "moment": "^2.30.1",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-intersection-observer": "^9.10.3",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.166.0",
+    "three-globe": "^2.31.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.43.1",
+    "@types/leaflet": "^1.9.12",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
