--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "embla-carousel-react": "^8.1.5",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
@@ -31,6 +32,7 @@
     "react-hook-form": "^7.52.0",
     "react-intersection-observer": "^9.10.3",
     "react-leaflet": "^4.2.1",
+    "react-spring": "^9.7.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
