--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cobe": "^0.6.3",
     "embla-carousel-react": "^8.1.5",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.408.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
